@@ -19,6 +19,7 @@ depth: 1
 ### Bug fixes
 
  * Update system check for overwriting storage backends to recognise the `STORAGES` setting introduced in Django 4.2 (phijma-leukeleu)
+ * Prevent password change form from raising a validation error when browser autocomplete fills in the "Old password" field (Chiemezuo Akujobi)
 
 ### Documentation
 
